projects/vb6parse/snapshots/tests/invalid_syntax/missing_keywords/missing_next_in_for_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/missing_keywords.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nSub Test()\\n    For i = 1 To 10\\n        Debug.Print i\\nEnd Sub\\n\", error_offset: 61, line_start: 5, line_end: 6, kind: Parser(UnexpectedTokens { expected: [\"statement\"], found: [EndKeyword, Whitespace, SubKeyword] }), severity: Error, labels: [], notes: [] }"
