projects/vb6parse/snapshots/tests/invalid_syntax/missing_keywords/missing_to_in_for_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/missing_keywords.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
[]
